--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,14 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>오늘뭐먹지!</title>
+  <title>오늘뭐먹지?</title>
 </head>
 
 
 <link rel="stylesheet" type="text/css"
   href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <!-- <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css"> -->
-<link rel="stylesheet" type="text/css" href="./stylesheet/index.min.css">
+<link rel="stylesheet" type="text/css" href="./stylesheet/index.css">
 
 <body>
   <div class="wrapper">
@@ -26,13 +26,13 @@
             <img src="img/food.png" alt="순두부지개/">            
                 <span class="next-btn btn home-start ">시작하기</span>
         </div>
-        <aside>
+        <!-- <aside>
           <span class="next-btn btn"></span>
-        </aside>
-        <div class="info">
+        </aside> -->
+        <!-- <div class="info">
           <span style="display: block;">&nbsp;본 웹사이트는 AWS로 호스팅 되어 있습니다.</span><br>
           <span >&nbsp;본 웹사이트는 크롬브라우저 및 데스크톱 환경에 최적화 되어있습니다.</span> 
-        </div>
+        </div> -->
       </section>
       <div class="Visual_1 si-z">
 
@@ -49,7 +49,7 @@
                 <p><small>가위바위보 게임에 이겨서 <br>점심 메뉴를 정해보세요!</small> </p>
               </div>
               <div class="skyblue">
-                <a href="#" class="top-btn btn">시작하기</a>
+                <a href="#" class="top-btn btn">Start!</a>
               </div>
             </div>
             <div class="cardContainer">
@@ -58,7 +58,7 @@
                 <img src="img/roulette.png" alt="룰렛">
                 <p><small>음식이 담긴 룰렛을 돌려서 <br>점심 메뉴를 정해보세요!</small> </p>
               </div>
-              <div class="yellow"><a href="#" class="bot-btn btn">시작하기</a></div>
+              <div class="yellow"><a href="#" class="bot-btn btn">Start!</a></div>
             </div>
             <div class="cardContainer">
               <div class="skyblue">
@@ -67,7 +67,7 @@
                 <p><small>승부차기를 이겨서 <br>점심 메뉴를 정해보세요!</small> </p>
               </div>
               <div class="red">
-                <a href="#" class="next-btn btn">시작하기</a>
+                <a href="#" class="next-btn btn">Start!</a>
                 <!-- <p><small>음식이 담긴 룰렛을 돌려서 <br>점심 메뉴를 정해보세요!</small> </p> -->
               </div>
             </div>
