--- a/public/stylesheet/layout/grid.css
+++ b/public/stylesheet/layout/grid.css
@@ -58,10 +58,14 @@
   }
 }
 
+body {
+  background-color: #f8f9fa;
+}
+
 article {
   position: relative;
   width: 100%;
-  height: 960px;
+  height: 100vh;
   overflow: hidden;
 }
 
@@ -86,6 +90,13 @@ article .contentWrap span {
 article .contentWrap img {
   padding-top: 20px;
   width: 150px;
+  padding-bottom: 4rem;
+}
+
+article .contentWrap .home-start {
+  display: block;
+  font-size: 1.8rem;
+  cursor: pointer;
 }
 
 article section {
@@ -99,7 +110,7 @@ article section .info {
   z-index: 2;
   color: #fff;
   font-weight: 300;
-  font-size: .9rem;
+  font-size: 0.9rem;
 }
 
 article section .info span {
@@ -115,13 +126,13 @@ article section .info span:before {
 
 article .si-z {
   width: 100%;
-  height: 960px;
+  height: 100%;
   position: absolute;
   background-color: orange;
 }
 
 article .Visual_1 {
-  background-color: #ffe8cc;
+  background-color: #f8f9fa;
   left: 100%;
 }
 
@@ -131,7 +142,6 @@ article .Visual_1 .contentMenu {
   left: 10%;
   width: 80%;
   height: 70%;
-  border: 1px solid blue;
 }
 
 article .Visual_1 .contentMenu .card {
@@ -142,7 +152,7 @@ article .Visual_1 .contentMenu .card {
 }
 
 article .Visual_1 .contentMenu div.cardContainer {
-  height: 500px;
+  height: 450px;
   width: 300px;
   display: inline-block;
   margin: 2%;
@@ -151,7 +161,7 @@ article .Visual_1 .contentMenu div.cardContainer {
 article .Visual_1 .contentMenu div.cardContainer div {
   height: inherit;
   width: inherit;
-  color: #FFF;
+  color: #fff;
   font-size: 24px;
   backface-visibility: hidden;
   -webkit-backface-visibility: hidden;
@@ -161,18 +171,20 @@ article .Visual_1 .contentMenu div.cardContainer div {
   -o-transition: all 1.5s;
   padding-top: 80px;
   text-align: center;
+  -webkit-box-shadow: 10px 10px 5px 0px rga(255, 232, 204);
+          box-shadow: 10px 10px 5px 0px rga(255, 232, 204);
 }
 
 article .Visual_1 .contentMenu .red {
-  background-color: green;
+  background-color: #ffe8cc;
 }
 
 article .Visual_1 .contentMenu .blue {
-  background-color: blue;
+  background-color: #ffe8cc;
 }
 
 article .Visual_1 .contentMenu .yellow {
-  background-color: yellow;
+  background-color: #ffd8a8;
 }
 
 article .Visual_1 .contentMenu .green {
@@ -180,7 +192,7 @@ article .Visual_1 .contentMenu .green {
 }
 
 article .Visual_1 .contentMenu .skyblue {
-  background-color: skyblue;
+  background-color: #ffc078;
 }
 
 article .Visual_1 .contentMenu .darkblue {
@@ -189,7 +201,7 @@ article .Visual_1 .contentMenu .darkblue {
 
 article .Visual_1 .contentMenu div.cardContainer div:last-child {
   position: relative;
-  top: -580px;
+  top: -530px;
   transform: rotateY(180deg);
   -webkit-transform: rotateY(180deg);
   -ms-transform: rotateY(180deg);
@@ -214,24 +226,38 @@ article .Visual_1 .contentMenu div.cardContainer:hover div:last-child {
 }
 
 article .Visual_2 {
-  background-color: green;
+  background-color: #f8f9fa;
   left: 200%;
 }
 
 article .Visual_3 {
-  background-color: blue;
+  background-color: #f8f9fa;
   left: 100%;
   top: 100%;
 }
 
 article .Visual_4 {
-  background-color: gray;
+  background-color: #f8f9fa;
   left: 100%;
   bottom: 100%;
 }
 
 .intro {
   text-align: center;
-  padding-top: 2rem;
+  padding-top: 6.5rem;
+  line-height: 2rem;
+}
+
+aside {
+  text-align: center;
+}
+
+aside h1 {
+  margin-top: 8rem;
+  margin-bottom: 2rem;
+}
+
+aside p {
+  line-height: 1.5rem;
 }
 /*# sourceMappingURL=grid.css.map */
