--- a/public/stylesheet/layout/header.css
+++ b/public/stylesheet/layout/header.css
@@ -1,4 +1,143 @@
-/* The Modal (background) */
+@-webkit-keyframes right-waterfall {
+  0% {
+    opacity: 0;
+    right: 50px;
+  }
+  50% {
+    opacity: 1;
+    right: 30px;
+  }
+  100% {
+    opacity: 0;
+    right: 0;
+  }
+}
+
+@keyframes right-waterfall {
+  0% {
+    opacity: 0;
+    right: 50px;
+  }
+  50% {
+    opacity: 1;
+    right: 30px;
+  }
+  100% {
+    opacity: 0;
+    right: 0;
+  }
+}
+
+@-webkit-keyframes left-waterfall {
+  0% {
+    opacity: 0;
+    left: 50px;
+  }
+  50% {
+    opacity: 1;
+    left: 30px;
+  }
+  100% {
+    opacity: 0;
+    left: 0;
+  }
+}
+
+@keyframes left-waterfall {
+  0% {
+    opacity: 0;
+    left: 50px;
+  }
+  50% {
+    opacity: 1;
+    left: 30px;
+  }
+  100% {
+    opacity: 0;
+    left: 0;
+  }
+}
+
+.header-wrap {
+  width: 100%;
+  height: 70px;
+  z-index: 1;
+  position: absolute;
+  /* Modal Content */
+  /* The Close Button */
+}
+
+.header-wrap .header {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 3rem 0rem;
+  text-align: right;
+}
+
+.header-wrap .modal-content {
+  position: absolute;
+  left: 37.5%;
+  top: 0;
+  /* opacity: 0; */
+  background-color: #fefefe;
+  padding: 20px;
+  border: 1px solid #888;
+  padding: 3rem;
+  width: 20%;
+}
+
+.header-wrap .close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.header-wrap .close:hover,
+.header-wrap .close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.header-wrap .form-header {
+  text-align: center;
+  padding-bottom: 2rem;
+}
+
+.header-wrap .input-group {
+  text-align: center;
+  padding: 1rem;
+}
+
+.header-wrap .input-group input {
+  border: 0;
+  border-bottom: 1px solid #ffe8cc;
+  width: 100%;
+}
+
+.header-wrap .input-group:nth-child(0) {
+  padding-top: 2rem;
+}
+
+.header-wrap .form-footer {
+  text-align: center;
+}
+
+.header-wrap .form-footer button {
+  cursor: pointer;
+}
+
+.header-wrap .user-name {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
 .modal {
   display: none;
   /* Hidden by default */
@@ -20,32 +159,5 @@
   /* Fallback color */
   background-color: rgba(0, 0, 0, 0.8);
   /* Black w/ opacity */
-}
-
-/* Modal Content */
-.modal-content {
-  position: absolute;
-  left: 25%;
-  top: 0;
-  /* opacity: 0; */
-  background-color: #fefefe;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 50%;
-}
-
-/* The Close Button */
-.close {
-  color: #aaaaaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: #000;
-  text-decoration: none;
-  cursor: pointer;
 }
 /*# sourceMappingURL=header.css.map */
