--- a/public/stylesheet/layout/sidebar.css
+++ b/public/stylesheet/layout/sidebar.css
@@ -9,6 +9,7 @@ aside .next-btn {
   z-index: 2;
   font-size: 2.8rem;
   color: gray;
+  cursor: pointer;
   -webkit-animation: right-waterfall 1.5s infinite ease-in-out;
           animation: right-waterfall 1.5s infinite ease-in-out;
 }
