--- a/public/stylesheet/pages/myPage.scss
+++ b/public/stylesheet/pages/myPage.scss
@@ -1,19 +1,19 @@
+@import "../base/utils.scss";
+
 .mypage {
   background: $oc-gray-2 !important;
-
 
   .timeline {
     max-width: 1200px;
     margin: 0 auto;
-    padding-top : 10rem;
+    padding-top: 10rem;
   }
 
   .intro-title {
     padding: 2.5rem 0;
     margin: 0.5rem;
     margin-bottom: 1rem;
-    border-bottom: 5px solid $oc-gray-3;    
-    
+    border-bottom: 5px solid $oc-gray-3;
   }
 
   table {
@@ -22,26 +22,23 @@
     border: 0;
 
     .thead-title th {
-      text-align: center ;
-  
+      text-align: center;
     }
   }
 
-  
-  .table-striped tbody tr:nth-of-type(odd)  {
+  .table-striped tbody tr:nth-of-type(odd) {
     background: ghostwhite !important;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-    transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
-    text-align: center ;
+    transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+    text-align: center;
 
-
-  &:hover {
-    background-color: rgba(0,0,0,.05) !important;
+    &:hover {
+      background-color: rgba(0, 0, 0, 0.05) !important;
+    }
   }
- }
- #delete {
-  border: 0;
-  padding: 0;
-  background: 0;
- }
+  #delete {
+    border: 0;
+    padding: 0;
+    background: 0;
+  }
 }
