fix: contents in soccer game

--- a/views/Game/SoccerGame.ejs
+++ b/views/Game/SoccerGame.ejs
@@ -1,39 +1,53 @@
 <div class="soccer-game">
   <div class="score-board">
     <div class="korea-shots">
-      <span>한국 남은슛</span>
+      <span>고지방 남은슛</span>
       <span id="kr-number">5</span>
       <span>번</span>
     </div>
     <div class="japen-shots">
-      <span>중국 남은슛</span>
+      <span>저지방 남은슛</span>
       <span id="jp-number">5</span>
       <span>번</span>
     </div>
     <div class="korea-score">
-      <div class="score-name"><img src="../img/korea.png" alt="flag" width="40%">한국<span id="kr-score"
-          class="panel-score">0</span></div>
+      <div class="score-name">
+        <img src="../img/noodle.png" alt="flag" width="40%" />고지방<span
+          id="kr-score"
+          class="panel-score"
+          >0</span
+        >
+      </div>
     </div>
     <div class="japen-score">
-      <div class="score-name"><span id="jp-score" class="panel-score">0</span>중국<img
-          src="//upload.wikimedia.org/wikipedia/commons/thumb/f/fa/Flag_of_the_People%27s_Republic_of_China.svg/225px-Flag_of_the_People%27s_Republic_of_China.svg.png"
-          alt="flag" width="40%"></div>
+      <div class="score-name">
+        <span id="jp-score" class="panel-score">0</span>저지방<img
+          src="/img/salad.png"
+          alt="flag"
+          width="40%"
+        />
+      </div>
     </div>
-    <div id="score-text">
-      Shoot 버튼을 클릭해서 진행합니다.
-    </div>
+    <div id="score-text">Shoot 버튼을 클릭해서 진행합니다.</div>
   </div>
   <div class="control-panel">
     <div class="div-korea">
       <div class="panel-name">사용자</div>
-      <button onclick="onKoreaShoot()" class="btn-korea"> Shoot</button>
+      <button onclick="onKoreaShoot()" class="btn-korea">Shoot</button>
     </div>
     <div class="div-japen">
       <div class="panel-name">컴퓨터</div>
-      <button onclick="onJapenShoot()" class="btn-japen" disabled> Shoot</button>
+      <button onclick="onJapenShoot()" class="btn-japen" disabled>Shoot</button>
     </div>
     <div class="div-reset">
-      <button onclick="onReset()" class="btn-reset" disabled style="margin-top: 3rem;">다시하기</button>
+      <button
+        onclick="onReset()"
+        class="btn-reset"
+        disabled
+        style="margin-top: 3rem"
+      >
+        다시하기
+      </button>
     </div>
   </div>
 </div>
