--- a/views/index.ejs
+++ b/views/index.ejs
@@ -63,7 +63,7 @@
             <div class="cardContainer">
               <div class="skyblue">
                 <p>축구</p>
-                <img src="img/banquet-table.png" alt="음식월드컵">
+                <img src="img/soccer.png" alt="음식월드컵">
                 <p><small>승부차기를 이겨서 <br>점심 메뉴를 정해보세요!</small> </p>
               </div>
               <div class="red">
@@ -81,6 +81,7 @@
         <aside>
           <h1>축구</h1>
           <p>승부차기 게임으로 메뉴를 정해 보세요.</p>
+          <p>게임에서 이기면 랜덤으로 음식을 정해줍니다.</p>
           <p>아래 슛 버튼을 눌러 시작할 수 있습니다.</p>
           <!-- <p>게임에 졌다면 음식을 정해주지 않습니다. (다이어트)</p> -->
           <a href="#"><span class="prev-btn btn"></span></a>
