--- a/public/stylesheet/index.css
+++ b/public/stylesheet/index.css
@@ -1,6 +1,4 @@
-@import url(/Users/hwan/Desktop/workspace/MostProject/TodayEat/public/stylesheet/base/reset.css);
 @import "base/reset.css";
-
 @-webkit-keyframes right-waterfall {
   0% {
     opacity: 0;
@@ -166,6 +164,7 @@ article .si-z {
 article .Visual_1 {
   background-color: #f8f9fa;
   left: 100%;
+  overflow: auto;
 }
 
 article .Visual_1 .contentMenu {
@@ -260,18 +259,21 @@ article .Visual_1 .contentMenu div.cardContainer:hover div:last-child {
 article .Visual_2 {
   background-color: #f8f9fa;
   left: 200%;
+  overflow: auto;
 }
 
 article .Visual_3 {
   background-color: #f8f9fa;
   left: 100%;
   top: 100%;
+  overflow: auto;
 }
 
 article .Visual_4 {
   background-color: #f8f9fa;
   left: 100%;
   bottom: 100%;
+  overflow: auto;
 }
 
 .intro {
