--- a/public/stylesheet/layout/grid.css
+++ b/public/stylesheet/layout/grid.css
@@ -134,6 +134,7 @@ article .si-z {
 article .Visual_1 {
   background-color: #f8f9fa;
   left: 100%;
+  overflow: auto;
 }
 
 article .Visual_1 .contentMenu {
@@ -228,18 +229,21 @@ article .Visual_1 .contentMenu div.cardContainer:hover div:last-child {
 article .Visual_2 {
   background-color: #f8f9fa;
   left: 200%;
+  overflow: auto;
 }
 
 article .Visual_3 {
   background-color: #f8f9fa;
   left: 100%;
   top: 100%;
+  overflow: auto;
 }
 
 article .Visual_4 {
   background-color: #f8f9fa;
   left: 100%;
   bottom: 100%;
+  overflow: auto;
 }
 
 .intro {
